# ocr-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
api/controllers/: ocr_controller.py
api/database/: __init__.py  models.py  repository.py  session.py
api/routes/: ocr_router.py  witchtr_router.py
api/services/: ocr_service.py  witchtr_service.py
requirements/: api.txt  base.txt  dev.txt
src/: output.py  pipe.py  utils.py
tests/: test_api.py  test_output.py  test_pipe.py  test_utils.py
